--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           node-version: '14'
       - name: Install dependecies
-        run: npm Install
+        run: npm install
       - name: Lint
         run: npm run lint
